...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="syg-Uc-Sp2">
                                <rect key="frame" x="50" y="288" width="314" height="34"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="EmailTF"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eyS-fG-bqU">
                                <rect key="frame" x="50" y="342" width="314" height="34"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordTF"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="L58-Gh-k8y">
                                <rect key="frame" x="50" y="396" width="314" height="100"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z3q-Wu-JUu">
                                        <rect key="frame" x="41" y="0.0" width="232" height="46"/>
                                        <accessibility key="accessibilityConfiguration" identifier="EmailSignIn"/>
                                        <state key="normal" title="Sign Up" backgroundImage="clearButtonSmall"/>
                                        <connections>
                                            <action selector="emailLogInButton:" destination="DpI-jA-uac" eventType="touchUpInside" id="ytc-Az-V3A"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f3i-D6-FqJ">
...
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="HmQ-DJ-7Us" secondAttribute="height" multiplier="234:175" id="RWM-kI-7uk"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hh-ae-R8P">
                                <rect key="frame" x="77" y="339" width="260" height="56.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="FacebookLogin"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="9Hh-ae-R8P" secondAttribute="height" multiplier="37:8" id="P5i-F9-Yqc"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                <state key="normal" title="Sign up with Facebook" image="signupFB">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="facebookSignInPressed" destination="DpI-jA-uac" eventType="touchUpInside" id="LhR-wd-G1N"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D9Y-Et-lgF">
                                <rect key="frame" x="77" y="266" width="260" height="56"/>
                                <accessibility key="accessibilityConfiguration" identifier="GoogleLogin"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="D9Y-Et-lgF" secondAttribute="height" multiplier="37:8" id="nuU-XP-SCW"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                <state key="normal" title="Sign up with Google" image="signupGG">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <connections>
                                    <action selector="googleSignInPressed:" destination="DpI-jA-uac" eventType="touchUpInside" id="mar-tJ-ZuY"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6mZ-QA-5IS">
                                <rect key="frame" x="77" y="412.5" width="260" height="56"/>
                                <accessibility key="accessibilityConfiguration" identifier="Email Button"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="6mZ-QA-5IS" secondAttribute="height" multiplier="37:8" id="tfZ-Q7-T43"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                <state key="normal" title="Sign up with Email" image="signupEM">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
