...
            emailButton.setImage(UIImage(named: "Sign Up with Email"), for: .normal)
            emailSignInButton.setImage(UIImage(named: "Sign Up"), for: .normal)
        } else {
            facebookLoginButton.setImage(UIImage(named: "Sign in with Facebook"), for: .normal)
            googleLoginButton.setImage(UIImage(named: "Sign in with Google"), for: .normal)
            emailButton.setImage(UIImage(named: "Sign in with Email"), for: .normal)
            emailSignInButton.setImage(UIImage(named: "Sign In"), for: .normal)
        }
    }
    
    /*
     // MARK: - Navigation
     
...
